--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
   },
   "homepage": "https://github.com/Jones-S/liquid-distortion#readme",
   "devDependencies": {
-    "gulp": "^3.9.0",
     "browser-sync": "^2.11.1",
+    "gulp": "^3.9.0",
     "gulp-sass": "^2.1.1",
     "node-bourbon": "^4.2.3",
     "node-neat": "^1.7.2"
+  },
+  "dependencies": {
+    "node-sass": "^4.7.2",
+    "pixi.js": "^4.7.0"
   }
 }
