--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "gulp --require babel-register --gulpfile tasks",
+    "build": "NODE_ENV=production gulp build --require babel-register --gulpfile tasks"
   },
   "repository": {
     "type": "git",
@@ -17,14 +19,23 @@
   },
   "homepage": "https://github.com/Jones-S/liquid-distortion#readme",
   "devDependencies": {
-    "browser-sync": "^2.11.1",
-    "gulp": "^3.9.0",
+    "browser-sync": "^2.23.6",
+    "gulp": "4.0.0",
     "gulp-sass": "^2.1.1",
     "node-bourbon": "^4.2.3",
     "node-neat": "^1.7.2"
   },
   "dependencies": {
+    "babel-core": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-notify": "^3.2.0",
+    "gulp-plumber": "^1.2.0",
+    "gulp-sourcemaps": "^1.12.1",
     "node-sass": "^4.7.2",
-    "pixi.js": "^4.7.0"
+    "pixi.js": "^4.7.0",
+    "webpack": "^3.10.0",
+    "webpack-dev-middleware": "^2.0.4",
+    "webpack-hot-middleware": "^2.21.0"
   }
 }
