--- a/package.json
+++ b/package.json
@@ -2,40 +2,20 @@
   "name": "liquid-distortion",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/js/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "gulp --require babel-register --gulpfile tasks",
-    "build": "NODE_ENV=production gulp build --require babel-register --gulpfile tasks"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Jones-S/liquid-distortion.git"
+    "dev": "webpack --config webpack.config.js --watch"
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Jones-S/liquid-distortion/issues"
-  },
-  "homepage": "https://github.com/Jones-S/liquid-distortion#readme",
-  "devDependencies": {
-    "browser-sync": "^2.23.6",
-    "gulp": "4.0.0",
-    "gulp-sass": "^2.1.1",
-    "node-bourbon": "^4.2.3",
-    "node-neat": "^1.7.2"
-  },
+  "devDependencies": {},
   "dependencies": {
     "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-notify": "^3.2.0",
-    "gulp-plumber": "^1.2.0",
-    "gulp-sourcemaps": "^1.12.1",
-    "node-sass": "^4.7.2",
-    "pixi.js": "^4.7.0",
-    "webpack": "^3.10.0",
-    "webpack-dev-middleware": "^2.0.4",
-    "webpack-hot-middleware": "^2.21.0"
+    "browser-sync": "^2.23.6",
+    "browser-sync-webpack-plugin": "^1.2.0",
+    "webpack": "^3.10.0"
   }
 }
