--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "copy-webpack-plugin": "^4.3.1",
     "css-loader": "^0.28.9",
     "extract-text-webpack-plugin": "^3.0.2",
+    "gsap": "^1.20.3",
     "node-sass": "^4.7.2",
     "pixi.js": "^4.7.0",
     "sass-loader": "^6.0.6",
